# recipe-parser

./: .gitignore
backend/: .gitignore  dev.py  main.OLD.py  main.py  pyproject.toml  requirements.txt  test_ai_categorization.py
backend/app/: config.py  models.py
backend/app/routes/: health.py  recipes.py
backend/app/services/: ingredient_parser.py  recipe_service.py
backend/app/services/ai/: __init__.py  recipe_categorizer.py
backend/app/services/parsers/: __init__.py  ai.py  base.py  extruct.py  html.py  recipe_scraper.py  structured.py
backend/app/services/processors/: __init__.py  image_extractor.py  instruction_processor.py  recipe_converter.py
backend/app/utils/: helpers.py
frontend/: .eslintrc.json  package-lock.json  package.BACKUP.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: LoadingSpinner.tsx  RecipeCard.tsx
